--- a/views/room.ejs
+++ b/views/room.ejs
@@ -26,9 +26,9 @@
       }
 
       video {
-        width: 150%;
-        height: 150%;
-        object-fit: cover;
+        width: 600px;
+        height: 400px;
+        object-fit: contain;
       }
 
       #myVideo {
