--- a/views/room.ejs
+++ b/views/room.ejs
@@ -54,12 +54,12 @@
       }
     </style>
   </head>
-  <canvas
+  <!-- <canvas
     id="canvas1"
     width="600px"
     height="500px"
     style="display: none"
-  ></canvas>
+  ></canvas> -->
   <canvas
     id="canvas2"
     width="600px"
@@ -71,7 +71,7 @@
       <div class="row">
         <div class="col-5 ms-2">
           <video id="myVideo"></video>
-          <canvas id="canvas" width="600px" height="600px"></canvas>
+          <canvas id="canvas1" width="600px" height="600px"></canvas>
         </div>
         <div
           class="col col-1 text-center my-auto ms-4"
